--- a/Spend Tracking App/Views/ExpenseCell.xib
+++ b/Spend Tracking App/Views/ExpenseCell.xib
@@ -9,30 +9,30 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="expenseCell" id="KGk-i7-Jjw" customClass="ExpenseCell" customModule="Spend_Tracking_App" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="expenseCell" rowHeight="50" id="KGk-i7-Jjw" customClass="ExpenseCell" customModule="Spend_Tracking_App" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="HVa-5p-oxX">
-                        <rect key="frame" x="30" y="15" width="260" height="14"/>
+                        <rect key="frame" x="30" y="10" width="260" height="30"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QwT-23-TOI">
-                                <rect key="frame" x="0.0" y="0.0" width="73.5" height="14"/>
+                                <rect key="frame" x="0.0" y="0.0" width="73.5" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DlK-94-vvv" userLabel="Name">
-                                <rect key="frame" x="93.5" y="0.0" width="73" height="14"/>
+                                <rect key="frame" x="93.5" y="0.0" width="73" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mml-pF-WKU">
-                                <rect key="frame" x="186.5" y="0.0" width="73.5" height="14"/>
+                                <rect key="frame" x="186.5" y="0.0" width="73.5" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -42,9 +42,9 @@
                 </subviews>
                 <constraints>
                     <constraint firstItem="HVa-5p-oxX" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="30" id="2nh-rw-64l"/>
-                    <constraint firstItem="HVa-5p-oxX" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="15" id="3Ro-sF-ib5"/>
+                    <constraint firstItem="HVa-5p-oxX" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="3Ro-sF-ib5"/>
                     <constraint firstAttribute="trailing" secondItem="HVa-5p-oxX" secondAttribute="trailing" constant="30" id="NxQ-gP-Y2G"/>
-                    <constraint firstAttribute="bottom" secondItem="HVa-5p-oxX" secondAttribute="bottom" constant="15" id="a18-7r-5Pu"/>
+                    <constraint firstAttribute="bottom" secondItem="HVa-5p-oxX" secondAttribute="bottom" constant="10" id="a18-7r-5Pu"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -52,8 +52,9 @@
                 <outlet property="amount" destination="Mml-pF-WKU" id="CwG-ip-xSw"/>
                 <outlet property="date" destination="QwT-23-TOI" id="jGY-yT-bUM"/>
                 <outlet property="name" destination="DlK-94-vvv" id="dBM-ea-QZH"/>
+                <outlet property="view" destination="H2p-sc-9uM" id="reM-C4-j75"/>
             </connections>
-            <point key="canvasLocation" x="139" y="114"/>
+            <point key="canvasLocation" x="137.68115942028987" y="115.84821428571428"/>
         </tableViewCell>
     </objects>
 </document>
